--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,7 +2,7 @@
 	<div class="row offer-banner">
 		<div class="sunday-summer-offer">
 			<img  class="offer-logo" alt="summer offer logo" src="../images/summer-special-logo.png"/>
-			<div class="offser-details">
+			<div class="offser-details hidden-xs">
 				<div class="date">
 					22 NOVEMBER
 				</div>
@@ -14,11 +14,17 @@
 		</div>
 		
 	</div>
-	<div class="row delivery-bar">
-        <a href=""><i class="fa fa-shopping-bag"></i>1 hour Click & Collect</a>
-        <a href=""><i class="fa fa-truck"></i> 1 hour express delivery</a>
-        <a href=""><i class="fa fa-calendar-minus-o"></i>Standard delivery;Mon - Sat</a>
-	</div>
+	<ul class="row delivery-bar">
+		<li class="col-xs-4 col-sm-4 col-md-4  col-lg-offset-2 col-lg-2">
+			<a href=""><i class="fa fa-shopping-bag"></i>1 hour Click & Collect</a>
+		</li>
+		<li class="col-xs-4 col-sm-4 col-md-4 col-lg-3">
+		 	<a href=""><i class="fa fa-truck"></i> 1 hour express delivery</a>
+		</li>
+		<li class="col-xs-4 col-sm-4 col-md-4 col-lg-3">
+			<a href=""><i class="fa fa-calendar-minus-o"></i>Standard delivery;Mon - Sat</a>
+		</li>
+	</ul>
 	<div class="product-list">
 	</div>
 </div>
